--- a/style.css
+++ b/style.css
@@ -40,14 +40,19 @@ nav {
   margin: auto;
   background: url('./img/kelly-sikkema-Z4GKcFAGck4-unsplash.jpg');
   background-size: cover;
+  padding: 10px;
+  font-size: 1.5rem;
 }
 
 
-input {
+input,select {
   margin-top: 10px;
   margin-bottom: 10px;
   background: rgb(168, 168, 221);
-  height: 25px
+  height: 25px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .input:focus {
