--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ footer {
   background-color: rgb(240, 235, 245);
   display: grid;
   grid-template-columns: 2fr 1fr;
+  
 }
 main {
   display: grid;
@@ -56,4 +57,15 @@ main {
 .contact,
 .follow {
   margin: 10px;
+}
+
+h1,h3,nav,footer{
+  color: rgb(71, 41, 97);
+  font-style: italic;
+}
+p{
+  font-size: large;
+  text-align: justify; 
+  
+  font-style: italic;
 }
