fixing header,form update

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  background-color: white;
+  position: sticky; top: 0;
+
 }
 
 /*logo style*/
