--- a/style2.css
+++ b/style2.css
@@ -1,139 +1,145 @@
 body {
-    margin: 0;
-  }
-  header {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  /*logo style*/
-  .logo {
-    margin: 10px 10px 0px 50px;
-    width: 300px;
-  }
-  
-  .header-text h1 {
-    font-size: 400%;
-    margin: 20px 10px 0px 10px;
-  }
-  
-  .header-text h3 {
-    font-size: 200%;
-  }
-  .header-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  /* Navigation style */
-  nav {
-    margin: 35px 20px 20px 20px;
-  }
-  .nav-list {
-    display: flex;
-    list-style: none;
-    gap: 1.5rem;
-  }
-  
-  .nav-links {
-    font-size: 150%;
-    font-weight: 500;
-    color: rgb(71, 41, 97);
-    font-style: italic;
-  }
-  
-  .nav-list :hover {
-    color: #c05326;
-  }
-    
-  
-  
-  form{
-    display: grid;
-    grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr ; 
-    background-color: rgb(232, 228, 236);
-    color: rgb(71, 41, 97);
-    font-style:italic;
-    font-weight:550;
- }
+  margin: 0;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  position: sticky;
+  top: 0;
+}
 
- /* containers style*/
- .name-container, .email-container, .phone-container, .address-container, .contact-container, .nannyType-container, .dateTime-container, .startDate-container, .request-container {                 
-     
-     margin:  10px;
-     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-     border-radius: 10px;
-     border: none;
-     background-color:rgb(220, 214, 224)
- }
- 
- 
- 
- /*inputs style */
- input[type="text"],
- input[type="email"], 
- input[type="date"]
- {
-     width: 400px;
-     height: 25px;
-     border-radius: 10px;     
- }
- /* button style*/
- .submit-container button{
-     padding: 1rem 4rem;
-     border: none;
-     background-color: #3f083f;             
-     border-radius: 10px;
-     color: #fff;        
-     font-family: 'Poor Story';
-     font-size: 20px;
-     margin-bottom: 10px ;
- }
-  form {
-    width: 100%;
-    max-width: 750px;    
-    
-    text-align: center;
-    font-size: larger;
-    font-style: oblique;
-    border-radius: 10px;
-    border: outset;
- }
- main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background-color: rgb(243, 240, 247);
+/*logo style*/
+.logo {
+  margin: 10px 10px 0px 50px;
+  width: 300px;
+}
 
- }
- .text{
+.header-text h1 {
+  font-size: 400%;
+  margin: 20px 10px 0px 10px;
+}
+
+.header-text h3 {
+  font-size: 200%;
+}
+.header-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Navigation style */
+nav {
+  margin: 35px 20px 20px 20px;
+}
+.nav-list {
+  display: flex;
+  list-style: none;
+  gap: 1.5rem;
+}
+
+.nav-links {
+  font-size: 150%;
+  font-weight: 500;
+  color: rgb(71, 41, 97);
+  font-style: italic;
+}
+
+.nav-list :hover {
+  color: #c05326;
+}
+
+form {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  background-color: rgb(232, 228, 236);
+  color: rgb(71, 41, 97);
+  font-style: italic;
+  font-weight: 550;
+}
+
+/* containers style*/
+.name-container,
+.email-container,
+.phone-container,
+.address-container,
+.contact-container,
+.nannyType-container,
+.dateTime-container,
+.startDate-container,
+.request-container {
+  margin: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 10px;
+  border: none;
+  background-color: rgb(220, 214, 224);
+}
+
+/*inputs style */
+input[type="text"],
+input[type="email"],
+input[type="date"] {
+  width: 400px;
+  height: 25px;
+  border-radius: 10px;
+  background-color: rgb(241, 241, 241);
+  font-style: italic;
+  font-size: 15px;
+  font-weight: 500;
+}
+/* button style*/
+.submit-container button {
+  padding: 1rem 4rem;
+  border: none;
+  background-color: #3f083f;
+  border-radius: 10px;
+  color: #fff;
+  font-family: "Poor Story";
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+form {
+  width: 100%;
+  max-width: 750px;
+  text-align: center;
+  font-size: larger;
+  font-style: oblique;
+  border-radius: 10px;
+  border: outset;
+}
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: rgb(243, 240, 247);
+}
+.text {
   margin: 60px 190px 60px 0px;
   text-align: center;
 }
-.image img{
+.image img {
   width: 750px;
-  height:1240px ;
-
+  height: 1395px;
 }
 
- p {
+p {
   font-size: large;
   text-align: justify;
   font-style: italic;
 }
 
-h1,h2,
-h3{
+h1,
+h2,
+h3 {
   color: rgb(71, 41, 97);
   font-style: italic;
 }
-option{
+option {
   color: rgb(71, 41, 97);
   font-style: italic;
-  font-size: medium;
-  font-weight: 550;
+  font-size: 15px;
+  font-weight: 500;
 }
-
 
 footer {
   display: grid;
@@ -143,14 +149,28 @@ footer {
   width: 60px;
   height: 60px;
   margin: 0px;
-  
 }
-.contact
- {
+.contact {
   margin: 50px 0px 50px 150px;
 }
-.follow{
+.follow {
   margin: 50px 0px 50px 100px;
 }
-
-  
+#nanny {
+  margin: 20px;
+  width: 170px;
+  height: 30px;  
+  font-size: 15px;
+  color: rgb(71, 41, 97);
+  background-color: rgb(241, 241, 241);
+  border-radius: 5px;
+  box-shadow: 4px 4px #ccc;
+  font-style: italic;
+}
+#request{
+  border-radius: 10px;
+  background-color: rgb(241, 241, 241);
+}
+.contact-cont{
+  font-size: 16px;
+}
